SIMD Intrinsics Fortran bindings/GMS_avx512_wrappers_.h

// Compile it as a C-code

    // Interoperable with corresponding Fortran derived type

        typedef struct __attribute__((align(64))) v8f64 {
                 double v[8];
        }v8f64;
	v8f64 v8f64_maskz_fmadd_pd(unsigned char, v8f64, v8f64, v8f64)
                                                                  __attribute__((noinline))
                                                                  __attribute__((hot))
				                                  __attribute__((regcall))
				                                  __attribute__((aligned(32)));
	v8f64 v8f64_fmadd_round_pd(v8f64, v8f64, v8f64, int)
	                                                          __attribute__((noinline))
                                                                  __attribute__((hot))
				                                  __attribute__((regcall))
				                                  __attribute__((aligned(32)));
	v8f64 v8f64_mask_fmadd_round_pd(v8f64, unsigned char, v8f64, v8f64, int)
	                                                          __attribute__((noinline))
                                                                  __attribute__((hot))
				                                  __attribute__((regcall))
				                                  __attribute__((aligned(32)));
	v8f64 v8f64_mask3_fmadd_round_pd(v8f64, v8f64, v8f64, unsigned char, int)
	                                                          __attribute__((noinline))
                                                                  __attribute__((hot))
				                                  __attribute__((regcall))
				                                  __attribute__((aligned(32)));
	v8f64 v8f64_maskz_fmadd_round_pd(unsigned char, v8f64, v8f64, v8f64, int)
	                                                          __attribute__((noinline))
                                                                  __attribute__((hot))
				                                  __attribute__((regcall))
				                                  __attribute__((aligned(32)));
	v8f64 v8f64_fmaddsub_pd(v8f64, v8f64, v8f64)
	                                         __attribute__((noinline))
                                                 __attribute__((hot))
				                 __attribute__((regcall))
				                 __attribute__((aligned(32)));
	v8f64 v8f64_mask_fmaddsub_pd(v8f64, unsigned char, v8f64, v8f64)
	                                         __attribute__((noinline))
                                                 __attribute__((hot))
				                 __attribute__((regcall))
				                 __attribute__((aligned(32)));
	v8f64 v8f64_mask3_fmaddsub_pd(v8f64, v8f64, v8f64, unsigned char)
	                                         __attribute__((noinline))
                                                 __attribute__((hot))
				                 __attribute__((regcall))
				                 __attribute__((aligned(32)));
	v8f64 v8f64_maskz_fmaddsub_pd(unsigned char, v8f64, v8f64, v8f64)
	                                         __attribute__((noinline))
                                                 __attribute__((hot))
				                 __attribute__((regcall))
				                 __attribute__((aligned(32)));
	v8f64 v8f64_fmaddsub_round_pd(v8f64, v8f64, v8f64, int)
	                                         __attribute__((noinline))
                                                 __attribute__((hot))
				                 __attribute__((regcall))
				                 __attribute__((aligned(32)));
	v8f64 v8f64_mask_fmaddsub_round_pd(v8f64, unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_mask3_fmaddsub_round_pd(v8f64, v8f64, v8f64, unsigned char, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_maskz_fmaddsub_round_pd(unsigned char, v8f64, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_fmsub_pd(v8f64, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_mask_fmsub_pd(v8f64, unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_mask3_fmsub_pd(v8f64, v8f64, v8f64, unsigned char)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_maskz_fmsub_pd(v8f64, v8f64, v8f64, unsigned char)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_fmsubadd_pd(v8f64, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_mask_fmsubadd_pd(v8f64, unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_mask3_fmsubadd_pd(v8f64, v8f64, v8f64, unsigned char)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_fmsubadd_round_pd(v8f64, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64 v8f64_mask_fmsubadd_round_pd(v8f64, unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));