SIMD Intrinsics Fortran bindings/GMS_avx512_bindings.f90


    interface
       function v8f64_maskz_fmadd_pd(k,a,b,c) &
            bind(c,name='v8f64_maskz_fmadd_pd')
            import :: v8f64
            integer(c_char),  intent(in), value :: k
            type(v8f64),      intent(in)        :: a
            type(v8f64),      intent(in)        :: b
            type(v8f64),      intent(in)        :: c
            type(v8f64) :: v8f64_maskz_fmadd_pd
       end function v8f64_maskz_fmadd_pd
    end interface

    interface
       function v8f64_fmadd_round_pd(a,b,c,rounding) &
            bind(c,name='v8f64_fmadd_round_pd')
            import :: v8f64
            type(v8f64),    intent(in)        :: a
            type(v8f64),    intent(in)        :: b
            type(v8f64),    intent(in)        :: c
            integer(c_int), intent(in), value :: rounding
            type(v8f64) :: v8f64_fmadd_round_pd
       end function v8f64_fmadd_round_pd
    end interface

    interface
       function v8f64_mask_fmadd_round_pd(a,k,b,c,rounding) &
            bind(c,name='v8f64_mask_fmadd_round_pd')
            import :: v8f64
            type(v8f64),     intent(in)        :: a
            integer(c_char), intent(in), value :: k
            type(v8f64),     intent(in)        :: b
            type(v8f64),     intent(in)        :: c
            integer(c_int),  intent(in), value :: rounding
            type(v8f64) :: v8f64_mask_fmadd_round_pd
       end function v8f64_mask_fmadd_round_pd
    end interface

    interface
       function v8f64_mask3_fmadd_round_pd(a,b,c,k,rounding) &
            bind(c,name='v8f64_mask3_fmadd_round_pd')
            import :: v8f64
            type(v8f64),     intent(in)        :: a
            type(v8f64),     intent(in)        :: b
            type(v8f64),     intent(in)        :: c
            integer(c_char), intent(in), value :: k
            integer(c_int),  intent(in), value :: rounding
            type(v8f64) :: v8f64_mask3_fmadd_round_pd
       end function v8f64_mask3_fmadd_round_pd
    end interface

    interface
       function v8f64_maskz_fmadd_round_pd(k,a,b,c,rounding) &
            bind(c,name='v8f64_maskz_fmadd_round')
            import :: v8f64
            integer(c_char),  intent(in), value :: k
            type(v8f64),      intent(in)        :: a
            type(v8f64),      intent(in)        :: b
            type(v8f64),      intent(in)        :: c
            integer(c_int),   intent(in), value :: rounding
            type(v8f64) :: v8f64_maskz_fmadd_round_pd
        end function v8f64_maskz_fmadd_round_pd
     end interface

     interface
        function v8f64_fmaddsub_pd(a,b,c) &
             bind(c,name='v8f64_fmaddsub_pd')
             import :: v8f64
             type(v8f64),  intent(in) :: a
             type(v8f64),  intent(in) :: b
             type(v8f64),  intent(in) :: c
             type(v8f64) :: v8f64_fmaddsub_pd
        end function v8f64_fmaddsub_pd
     end interface

     interface
        function v8f64_mask_fmaddsub_pd(a,k,b,c) &
             bind(c,name='v8f64_mask_fmaddsub_pd')
             import :: v8f64
             type(v8f64),     intent(in)        :: a
             integer(c_char), intent(in), value :: k
             type(v8f64),     intent(in)        :: b
             type(v8f64),     intent(in)        :: c
             type(v8f64) :: v8f64_mask_fmaddsub_pd
        end function v8f64_mask_fmaddsub_pd
     end interface

     interface
        function v8f64_mask3_fmaddsub_pd(a,b,c,k) &
             bind(c,name='v8f64_mask3_fmaddsub_pd')
             import :: v8f64
             type(v8f64),     intent(in)        :: a
             type(v8f64),     intent(in)        :: b
             type(v8f64),     intent(in)        :: c
             integer(c_char), intent(in), value :: k
             type(v8f64) :: v8f64_mask3_fmaddsub_pd
         end function v8f64_mask3_fmaddsub_pd
      end interface

      interface
         function v8f64_maskz_fmaddsub_pd(k,a,b,c) &
              bind(c,name='v8f64_maskz_fmaddsub_pd')
              import :: v8f64
              integer(c_char), intent(in), value :: k
              type(v8f64),     intent(in)        :: a
              type(v8f64),     intent(in)        :: b
              type(v8f64),     intent(in)        :: c
              type(v8f64) :: v8f64_maskz_fmaddsub_pd
         end function v8f64_maskz_fmaddsub_pd
      end interface

      interface
         function v8f64_fmaddsub_round_pd(a,b,c,rounding) &
              bind(c,name='v8f64_fmaddsub_round_pd')
              import :: v8f64
              type(v8f64),    intent(in)        :: a
              type(v8f64),    intent(in)        :: b
              type(v8f64),    intent(in)        :: c
              integer(c_int), intent(in), value :: rounding
              type(v8f64) :: v8f64_fmaddsub_round_pd
         end function v8f64_fmaddsub_round_pd
      end interface

      interface
         function v8f64_mask_fmaddsub_round_pd(a,k,b,c,rounding) &
              bind(c,name='v8f64_mask_fmaddsub_pd')
              import :: v8f64
              type(v8f64),     intent(in)           :: a
              integer(c_char), intent(in), value    :: k
              type(v8f64),     intent(in)           :: b
              type(v8f64),     intent(in)           :: c
              integer(c_int),  intent(in), value    :: rounding
              type(v8f64) :: v8f64_mask_fmaddsub_round_pd
         end function v8f64_mask_fmaddsub_round_pd
      end interface

      interface
         function v8f64_mask3_fmaddsub_round_pd(a,b,c,k,rounding) &
              bind(c,name='v8f64_mask3_fmaddsub_round_pd')
              import :: v8f64
              type(v8f64),     intent(in)  :: a
              type(v8f64),     intent(in)  :: b
              type(v8f64),     intent(in)  :: c
              integer(c_char), intent(in), value :: k
              integer(c_int),  intent(in), value :: rounding
              type(v8f64) :: v8f64_mask3_fmaddsub_round_pd
         end function v8f64_mask3_fmaddsub_round_pd
      end interface

      interface
         function v8f64_maskz_fmaddsub_round_pd(k,a,b,c,rounding) &
              bind(c,name='v8f64_maskz_fmaddsub_round_pd')
              import :: v8f64
              integer(c_int),   intent(in), value :: k
              type(v8f64),      intent(in)        :: a
              type(v8f64),      intent(in)        :: b
              type(v8f64),      intent(in)        :: c
              integer(c_char),  intent(in), value :: rounding
              type(v8f64) :: v8f64_maskz_fmaddsub_round_pd
          end function v8f64_maskz_fmaddsub_round_pd
       end interface

       interface
          function v8f64_fmsub_pd(a,b,c) &
               bind(c,name='v8f64_fmsub_pd')
               import :: v8f64
               type(v8f64),    intent(in) :: a
               type(v8f64),    intent(in) :: b
               type(v8f64),    intent(in) :: c
               type(v8f64) :: v8f64_fmsub_pd
          end function v8f64_fmsub_pd
       end interface

       interface
          function v8f64_mask_fmsub_pd(a,k,b,c) &
               bind(c,name='v8f64_mask_fmsub_pd')
               import :: v8f64
               type(v8f64),     intent(in)        :: a
               integer(c_char), intent(in), value :: k
               type(v8f64),     intent(in)        :: b
               type(v8f64),     intent(in)        :: c
               type(v8f64) :: v8f64_mask_fmsub_pd
           end function v8f64_mask_fmsub_pd
       end interface

       interface
          function v8f64_mask3_fmsub_pd(a,b,c,k) &
               bind(c,name='v8f64_mask3_fmsub_pd')
               import :: v8f64
               type(v8f64),     intent(in)        :: a
               type(v8f64),     intent(in)        :: b
               type(v8f64),     intent(in)        :: c
               integer(c_char), intent(in), value :: k
               type(v8f64) :: v8f64_mask3_fmsub_pd
          end function v8f64_mask3_fmsub_pd
       end interface

       interface
          function v8f64_maskz_fmsub_pd(a,b,c,k) &
               bind(c,name='v8f64_maskz_fmsub_pd')
               import :: v8f64
               type(v8f64),     intent(in)        :: a
               type(v8f64),     intent(in)        :: b
               type(v8f64),     intent(in)        :: c
               integer(c_char), intent(in), value :: k
               type(v8f64) :: v8f64_maskz_fmsub_pd
          end function v8f64_maskz_fmsub_pd
       end interface

       interface
          function v8f64_fmsubadd_pd(a,b,c) &
               bind(c,name='v8f64_fmsubadd_pd')
               import :: v8f64
               type(v8f64),     intent(in) :: a
               type(v8f64),     intent(in) :: b
               type(v8f64),     intent(in) :: c
               type(v8f64) :: v8f64_fmsubadd_pd
           end function v8f64_fmsubadd_pd
       end interface

       interface
          function v8f64_mask_fmsubadd_pd(a,k,b,c) &
               bind(c,name='v8f64_mask_fmsubadd_pd')
               import :: v8f64
               type(v8f64),     intent(in)        :: a
               integer(c_char), intent(in), value :: k
               type(v8f64),     intent(in)        :: b
               type(v8f64),     intent(in)        :: c
               type(v8f64) :: v8f64_mask_fmsubadd_pd
          end function v8f64_mask_fmsubadd_pd
       end interface

       interface
          function v8f64_mask3_fmsubadd_pd(a,b,c,k) &
               bind(c,name='v8f64_mask3_fmsubadd_pd')
               import :: v8f64
               type(v8f64),     intent(in)        :: a
               type(v8f64),     intent(in)        :: b
               type(v8f64),     intent(in)        :: c
               integer(c_char), intent(in), value :: k
               type(v8f64) :: v8f64_mask3_fmsubadd_pd
          end function v8f64_mask3_fmsubadd_pd
       end interface

       interface
          function v8f64_maskz_fmsubadd_pd(k,a,b,c) &
               bind(c,name='v8f64_maskz_fmsubadd_pd')
               import :: v8f64
               integer(c_char),  intent(in), value :: k
               type(v8f64),      intent(in)        :: a
               type(v8f64),      intent(in)        :: b
               type(v8f64),      intent(in)        :: c
               type(v8f64) :: v8f64_maskz_fmsubadd_pd
           end function v8f64_maskz_fmsubadd_pd
       end interface

       interface
          function v8f64_fmsubadd_round_pd(a,b,c,rounding) &
               bind(c,name='v8f64_fmsubadd_round_pd')
               import :: v8f64
               type(v8f64),     intent(in)  :: a
               type(v8f64),     intent(in)  :: b
               type(v8f64),     intent(in)  :: c
               integer(c_int),  intent(in)  :: rounding
               type(v8f64) :: v8f64_fmsubadd_round_pd
          end function v8f64_fmsubadd_round_pd
       end interface

       interface
          function v8f64_mask_fmsubadd_round_pd(a,k,b,c,rounding) &
               bind(c,name='v8f64_mask_fmsubadd_round_pd')
               import :: v8f64
               type(v8f64),     intent(in)        :: a
               integer(c_char), intent(in), value :: k
               type(v8f64),     intent(in)        :: b
               type(v8f64),     intent(in)        :: c
               integer(c_int),  intent(in), value :: rounding
               type(v8f64) :: v8f64_mask_fmsubadd_round_pd
          end function v8f64_mask_fmsubadd_round_pd
       end interface
